<resources>
    <string name="app_name">ThingSearch</string>
    <string name="title_activity_edit_item">Edit Item</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="edit_name">Item name</string>
    <string name="edit_id">Item ID</string>
    <string name="edit_tags">Item Tags (separate with space)</string>
    <string name="edit_parent">Parent ID</string>
    <string name="apply">Apply</string>
    <string name="title_activity_view_item">View Item</string>
</resources>