<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditItem">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/item_image"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:layout_below="@+id/appbar"
        android:src="@drawable/donut" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/item_image"
        android:layout_marginHorizontal="16dp"
        android:singleLine="true"
        android:hint="@string/edit_name"
        />


    <EditText
        android:id="@+id/tags"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/name"
        android:layout_marginHorizontal="16dp"
        android:singleLine="true"
        android:hint="@string/edit_tags"
        />

    <EditText
        android:id="@+id/id"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/tags"
        android:layout_marginHorizontal="16dp"
        android:singleLine="true"
        android:hint="@string/edit_id"
        />

    <EditText
        android:id="@+id/parent_id"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/id"
        android:layout_marginHorizontal="16dp"
        android:singleLine="true"
        android:hint="@string/edit_parent"
        />

    <Button
        android:layout_width="128dp"
        android:layout_height="48dp"
        android:layout_below="@+id/parent_id"
        android:layout_centerHorizontal="true"
        android:text="@string/apply"
        android:onClick="applyChanges"/>

</RelativeLayout>

</ScrollView>